[workspace]
resolver = "2"
members = [
    "crates/config",
    "crates/common",
    "crates/event-catcher",
    "crates/v3-pool",
    "crates/replay",
    "crates/simulator",
]

[workspace.dependencies]
alloy = { version = "1", features = ["provider-http", "rpc-types", "sol-types"] }
mongodb = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
url = "2"
dotenvy = "0.15"

# Fast dev builds with optimized dependencies (U256 math, MongoDB driver)
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
