[package]
name = "replay"
version = "0.1.0"
edition = "2021"

[dependencies]
v3-pool = { path = "../v3-pool" }
sim-config = { path = "../config" }
sim-common = { path = "../common" }
alloy = { workspace = true }
mongodb = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
futures = "0.3"
